--- a/week6/Lab6.ipynb
+++ b/week6/Lab6.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "b3547fb9-1733-43a7-86d0-fb146bf0ded6",
    "metadata": {},
    "outputs": [],
@@ -79,8 +79,13 @@
     "    qc1 = qiskit.QuantumCircuit(qr1)\n",
     "\n",
     "    # Put your code here (spaces for indentation)\n",
+    "    qc1.x(0)\n",
+    "    qc1.cx(1, 0)\n",
+    "    qc1.swap(0, 1)\n",
+    "    qc1.cx(1, 0)\n",
+    "    qc1.z(0)\n",
+    "    qc1.z(1)\n",
     "    # End Code\n",
-    "\n",
     "    return qc1\n",
     "      "
    ]
@@ -108,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
    "outputs": [],
@@ -120,10 +125,12 @@
     "    qc2 = qiskit.QuantumCircuit(qr2)\n",
     "\n",
     "    # Put your code here (spaces for indentation)\n",
+    "    qc2.h(1)\n",
+    "    qc2.swap(0,1)\n",
+    "    qc2.x(0)\n",
+    "    qc2.cz(1,0)\n",
     "    # End Code\n",
-    "\n",
-    "    return qc2\n",
-    "      "
+    "    return qc2"
    ]
   },
   {
@@ -151,10 +158,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j]\n",
+      " [1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">            \n",
+       "q67_0: ─────\n",
+       "            \n",
+       "q67_1: ─────\n",
+       "       ┌───┐\n",
+       "q67_2: ┤ X ├\n",
+       "       └───┘</pre>"
+      ],
+      "text/plain": [
+       "            \n",
+       "q67_0: ─────\n",
+       "            \n",
+       "q67_1: ─────\n",
+       "       ┌───┐\n",
+       "q67_2: ┤ X ├\n",
+       "       └───┘"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import qiskit\n",
     "\n",
@@ -163,10 +210,9 @@
     "    qc3 = qiskit.QuantumCircuit(qr3)\n",
     "\n",
     "    # Put your code here (spaces for indentation)\n",
+    "    qc3.x(2)\n",
     "    # End Code\n",
-    "\n",
-    "    return qc3\n",
-    "      "
+    "    return qc3"
    ]
   },
   {
