--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -62,31 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b3547fb9-1733-43a7-86d0-fb146bf0ded6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "hw3_1a_response() missing 3 required positional arguments: 'circuit', 'qubit1', and 'qubit2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000002vscode-remote?line=8'>9</a>\u001b[0m     \u001b[39mprint\u001b[39m(op\u001b[39m.\u001b[39mdata)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000002vscode-remote?line=10'>11</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m circuit\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000002vscode-remote?line=12'>13</a>\u001b[0m c \u001b[39m=\u001b[39m hw3_1a_response()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000002vscode-remote?line=13'>14</a>\u001b[0m c\u001b[39m.\u001b[39mdraw()\n",
-      "\u001b[0;31mTypeError\u001b[0m: hw3_1a_response() missing 3 required positional arguments: 'circuit', 'qubit1', and 'qubit2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qiskit\n",
     "\n",
     "def hw3_1a_response(circuit, qubit1, qubit2):\n",
     "    # Put your code here (spaces for indentation)\n",
-    "    circuit.h(0)\n",
-    "    circuit.cx(0, 1)\n",
+    "    qr1 = qiskit.QuantumRegister(2, [qubit1, qubit2])\n",
+    "    qc1 = qiskit.QuantumCircuit(qr1, circuit)\n",
+    "    \n",
+    "    qc1.h(0)\n",
+    "    qc1.cx(0,1)\n",
     "\n",
-    "    return circuit"
+    "    return circuit\n",
+    "\n"
    ]
   },
   {
