--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -71,11 +71,11 @@
     "\n",
     "def hw3_1a_response(circuit, qubit1, qubit2):\n",
     "    # Put your code here (spaces for indentation)\n",
-    "    qr1 = qiskit.QuantumRegister(2, [qubit1, qubit2])\n",
-    "    qc1 = qiskit.QuantumCircuit(qr1, circuit)\n",
+    "    # qr1 = qiskit.QuantumRegister(2, [qubit1, qubit2])\n",
+    "    # qc1 = qiskit.QuantumCircuit(qr1, circuit)\n",
     "    \n",
-    "    qc1.h(0)\n",
-    "    qc1.cx(0,1)\n",
+    "    # qc1.h(0)\n",
+    "    # qc1.cx(0,1)\n",
     "\n",
     "    return circuit\n",
     "\n"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "34b581c7-4071-4870-83e5-f950c3eb240c",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6e752e3b-f5c0-4f9d-b4a5-02f8746c5748",
    "metadata": {},
    "outputs": [],
