--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -154,7 +154,7 @@
     "def hw3_1b_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "    return circuit, result_dict\n",
+    "    return # circuit, result_dict\n",
     "      "
    ]
   },
@@ -184,8 +184,9 @@
     "\n",
     "def hw3_1c_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
+    "\n",
     "    # End Code\n",
-    "    return circuit, result_dict\n",
+    "    return # circuit, result_dict\n",
     "      \n",
     "      "
    ]
@@ -259,7 +260,7 @@
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
     "\n",
-    "    return qubit_1, qubit_2\n",
+    "    return # qubit_1, qubit_2\n",
     "      "
    ]
   },
@@ -301,7 +302,7 @@
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
     "\n",
-    "    return qubit_1, qubit_2\n",
+    "    return # qubit_1, qubit_2\n",
     "      "
    ]
   },
