--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -76,6 +76,7 @@
     "    \n",
     "    # qc1.h(0)\n",
     "    # qc1.cx(0,1)\n",
+    "    print(\"hello\")\n",
     "\n",
     "    return circuit\n",
     "\n"
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
    "outputs": [],
@@ -154,7 +155,9 @@
     "def hw3_1b_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "    return # circuit, result_dict\n",
+    "    print(\"hello\")\n",
+    "    return\n",
+    "    # return circuit, result_dict\n",
     "      "
    ]
   },
@@ -175,20 +178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "import qiskit\n",
     "\n",
     "def hw3_1c_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
-    "\n",
+    "    \n",
+    "    print(num_shots)\n",
+    "    \n",
     "    # End Code\n",
-    "    return # circuit, result_dict\n",
-    "      \n",
-    "      "
+    "    # return circuit, result_dict\n",
+    "    return "
    ]
   },
   {
@@ -259,9 +271,10 @@
     "\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
+    "    print(\"hello\")\n",
     "\n",
-    "    return # qubit_1, qubit_2\n",
-    "      "
+    "    # return qubit_1, qubit_2\n",
+    "    return"
    ]
   },
   {
@@ -302,7 +315,8 @@
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
     "\n",
-    "    return # qubit_1, qubit_2\n",
+    "    # return qubit_1, qubit_2\n",
+    "    return\n",
     "      "
    ]
   },
@@ -342,6 +356,7 @@
     "\n",
     "def hw3_4_response(n: int):\n",
     "    # Put your code here\n",
+    "    print(n)\n",
     "    # End Code\n",
     "\n",
     "    return\n",
