--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -71,12 +71,11 @@
     "\n",
     "def hw3_1a_response(circuit, qubit1, qubit2):\n",
     "    # Put your code here (spaces for indentation)\n",
-    "    # qr1 = qiskit.QuantumRegister(2, [qubit1, qubit2])\n",
-    "    # qc1 = qiskit.QuantumCircuit(qr1, circuit)\n",
+    "    qr1 = qiskit.QuantumRegister(2, [qubit1, qubit2])\n",
+    "    qc1 = qiskit.QuantumCircuit(qr1, circuit)\n",
     "    \n",
-    "    # qc1.h(0)\n",
-    "    # qc1.cx(0,1)\n",
-    "    print(\"hello\")\n",
+    "    qc1.h(0)\n",
+    "    qc1.cx(0,1)\n",
     "\n",
     "    return circuit\n",
     "\n"
@@ -145,20 +144,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fdabbca0>,\n",
+       " {'11': 507, '00': 517})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import qiskit\n",
+    "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def hw3_1b_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
+    "    simulator = QasmSimulator()\n",
+    "    reg = qiskit.QuantumRegister(2)\n",
+    "    circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "    circuit.h(0)\n",
+    "    circuit.cx(0,1)\n",
+    "    circuit.measure_all()\n",
+    "\n",
+    "    executed_job = qiskit.execute(circuit, simulator, shots=num_shots)\n",
+    "    r = executed_job.result()\n",
+    "    result_dict = r.get_counts(circuit)\n",
     "    # End Code\n",
-    "    print(\"hello\")\n",
-    "    return\n",
-    "    # return circuit, result_dict\n",
-    "      "
+    "    return circuit, result_dict"
    ]
   },
   {
@@ -183,11 +203,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fdaa83d0>,\n",
+       " {'11': 266, '01': 272, '10': 239, '00': 247})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,12 +219,21 @@
     "\n",
     "def hw3_1c_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
-    "    \n",
-    "    print(num_shots)\n",
-    "    \n",
+    "    simulator = QasmSimulator()\n",
+    "    reg = qiskit.QuantumRegister(2)\n",
+    "    circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "    circuit.h(0)\n",
+    "    circuit.h(1)\n",
+    "    circuit.measure_all()\n",
+    "\n",
+    "    executed_job = qiskit.execute(circuit, simulator, shots=num_shots)\n",
+    "    r = executed_job.result()\n",
+    "    result_dict = r.get_counts(circuit)\n",
     "    # End Code\n",
-    "    # return circuit, result_dict\n",
-    "    return "
+    "    return circuit, result_dict\n",
+    "\n",
+    "hw3_1c_response(1024)"
    ]
   },
   {
@@ -259,22 +292,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "id": "34b581c7-4071-4870-83e5-f950c3eb240c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ┌───┐     \n",
+      "q792_0: ┤ H ├──■──\n",
+      "        ├───┤  │  \n",
+      "q792_1: ┤ H ├──┼──\n",
+      "        └───┘┌─┴─┐\n",
+      "q792_2: ─────┤ X ├\n",
+      "             └───┘\n",
+      "{'111': 267, '101': 234, '000': 254, '010': 269}\n",
+      "(0, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "import qiskit\n",
     "\n",
     "def hw3_2_response(circuit):\n",
     "    # Put your code to find the entangled qubits here\n",
+    "    simulator = QasmSimulator()\n",
     "\n",
+    "    circuit.measure_all()\n",
+    "\n",
+    "    executed_job = qiskit.execute(circuit, simulator, shots=1024)\n",
+    "    r = executed_job.result()\n",
+    "    result_dict = r.get_counts(circuit)\n",
+    "\n",
+    "    bitstrings = [\"000001\", \"000010\", \"000100\", \"001000\", \"010000\", \"100000\"]\n",
+    "    qubit_1 = -1\n",
+    "    qubit_2 = -1\n",
+    "    one_or_two = 1\n",
+    "\n",
+    "    for i in range(0,6):\n",
+    "        if result_dict.get(bitstrings[i]) == None:\n",
+    "            if one_or_two == 1:\n",
+    "                qubit_1 = i\n",
+    "                one_or_two = 2\n",
+    "            else:\n",
+    "                qubit_2 = i\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "    print(\"hello\")\n",
-    "\n",
-    "    # return qubit_1, qubit_2\n",
-    "    return"
+    "    return qubit_1, qubit_2"
    ]
   },
   {
@@ -307,16 +372,51 @@
     "import qiskit\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
+    "    for i in range(0,bitstring.len()):\n",
+    "        if bitstring[i] == '1':\n",
+    "            qubit_list[i].x()\n",
+    "    \n",
+    "\n",
     "    return circuit\n",
     "\n",
     "def hw3_3_response(circuit):\n",
     "    # Put your code to find the entangled qubits here\n",
+    "    simulator = QasmSimulator()\n",
+    "\n",
+    "    circuit.measure_all()\n",
+    "\n",
+    "    executed_job = qiskit.execute(circuit, simulator, shots=1024)\n",
+    "    r = executed_job.result()\n",
+    "    result_dict = r.get_counts(circuit)\n",
+    "\n",
+    "    bitstrings = [\"000001\", \"000010\", \"000100\", \"001000\", \"010000\", \"100000\"]\n",
+    "    qubit_1 = -1\n",
+    "    qubit_2 = -1\n",
+    "\n",
+    "    for i in range(0,6):\n",
+    "        if result_dict.get(bitstrings[i]) == None:\n",
+    "            if one_or_two == 1:\n",
+    "                qubit_1 = i\n",
+    "                one_or_two = 2\n",
+    "            else:\n",
+    "                qubit_2 = i\n",
+    "\n",
+    "    if qubit_1 != -1 and qubit_2 != -1:\n",
+    "        return qubit_1, qubit_2\n",
+    "\n",
+    "    for i in range(0,5):\n",
+    "        for j in range(1,6):\n",
+    "            bitstring = \"000000\"\n",
+    "            bitstring[i] == '1'\n",
+    "            bitstring[j] == '1'\n",
+    "\n",
+    "            if result_dict.get(bitstring) == None:\n",
+    "                qubit_1 = j\n",
+    "                qubit_2 = i\n",
+    "                return qubit_1, qubit_2\n",
     "\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "\n",
-    "    # return qubit_1, qubit_2\n",
-    "    return\n",
     "      "
    ]
   },
@@ -347,20 +447,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "id": "6e752e3b-f5c0-4f9d-b4a5-02f8746c5748",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ┌───┐                         \n",
+      "q808_0: ┤ H ├──■────■────■────■────■──\n",
+      "        └───┘┌─┴─┐  │    │    │    │  \n",
+      "q808_1: ─────┤ X ├──┼────┼────┼────┼──\n",
+      "             └───┘┌─┴─┐  │    │    │  \n",
+      "q808_2: ──────────┤ X ├──┼────┼────┼──\n",
+      "                  └───┘┌─┴─┐  │    │  \n",
+      "q808_3: ───────────────┤ X ├──┼────┼──\n",
+      "                       └───┘┌─┴─┐  │  \n",
+      "q808_4: ────────────────────┤ X ├──┼──\n",
+      "                            └───┘┌─┴─┐\n",
+      "q808_5: ─────────────────────────┤ X ├\n",
+      "                                 └───┘\n"
+     ]
+    }
+   ],
    "source": [
     "import qiskit\n",
     "\n",
     "def hw3_4_response(n: int):\n",
     "    # Put your code here\n",
-    "    print(n)\n",
+    "    reg = qiskit.QuantumRegister(n)\n",
+    "    circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "    circuit.h(0)\n",
+    "\n",
+    "    for i in range(1, n):\n",
+    "        circuit.cx(0, i)\n",
     "    # End Code\n",
     "\n",
-    "    return\n",
-    "      "
+    "    return circuit"
    ]
   },
   {
