maybe this time

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -77,8 +77,7 @@
     "    qc1.h(0)\n",
     "    qc1.cx(0,1)\n",
     "\n",
-    "    return circuit\n",
-    "\n"
+    "    return circuit"
    ]
   },
   {
@@ -216,6 +215,7 @@
    ],
    "source": [
     "import qiskit\n",
+    "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def hw3_1c_response(num_shots):\n",
     "    # Put your code here (spaces for indentation)\n",
@@ -231,9 +231,7 @@
     "    r = executed_job.result()\n",
     "    result_dict = r.get_counts(circuit)\n",
     "    # End Code\n",
-    "    return circuit, result_dict\n",
-    "\n",
-    "hw3_1c_response(1024)"
+    "    return circuit, result_dict"
    ]
   },
   {
@@ -314,6 +312,7 @@
    ],
    "source": [
     "import qiskit\n",
+    "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def hw3_2_response(circuit):\n",
     "    # Put your code to find the entangled qubits here\n",
@@ -370,6 +369,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
+    "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
     "    for i in range(0,bitstring.len()):\n",
