did the fix they said

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -71,11 +71,8 @@
     "\n",
     "def hw3_1a_response(circuit, qubit1, qubit2):\n",
     "    # Put your code here (spaces for indentation)\n",
-    "    qr1 = qiskit.QuantumRegister(2, [qubit1, qubit2])\n",
-    "    qc1 = qiskit.QuantumCircuit(qr1, circuit)\n",
-    "    \n",
-    "    qc1.h(0)\n",
-    "    qc1.cx(0,1)\n",
+    "    circuit.h(qubit1)\n",
+    "    circuit.cx(qubit1,qubit2)\n",
     "\n",
     "    return circuit"
    ]
@@ -143,22 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fdabbca0>,\n",
-       " {'11': 507, '00': 517})"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qiskit\n",
     "from qiskit.providers.aer import QasmSimulator\n",
@@ -197,22 +182,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fdaa83d0>,\n",
-       " {'11': 266, '01': 272, '10': 239, '00': 247})"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qiskit\n",
     "from qiskit.providers.aer import QasmSimulator\n",
