--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -62,10 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "b3547fb9-1733-43a7-86d0-fb146bf0ded6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                ┌───┐\n",
+      "q812_0: ─X──────┤ X ├\n",
+      "         │ ┌───┐└─┬─┘\n",
+      "q812_1: ─X─┤ H ├──■──\n",
+      "           └───┘     \n"
+     ]
+    }
+   ],
    "source": [
     "import qiskit\n",
     "\n",
@@ -74,7 +86,12 @@
     "    circuit.h(qubit1)\n",
     "    circuit.cx(qubit1,qubit2)\n",
     "\n",
-    "    return circuit"
+    "    return circuit\n",
+    "\n",
+    "reg = qiskit.QuantumRegister(2)\n",
+    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "print(hw3_1a_response(circuit, 1, 0))"
    ]
   },
   {
@@ -140,10 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25ff1096a0>,\n",
+       " {'00': 510, '11': 514})"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import qiskit\n",
     "from qiskit.providers.aer import QasmSimulator\n",
@@ -162,7 +191,9 @@
     "    r = executed_job.result()\n",
     "    result_dict = r.get_counts(circuit)\n",
     "    # End Code\n",
-    "    return circuit, result_dict"
+    "    return circuit, result_dict\n",
+    "\n",
+    "hw3_1b_response(1024)"
    ]
   },
   {
@@ -182,10 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd9bc3d0>,\n",
+       " {'11': 501, '00': 523})"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import qiskit\n",
     "from qiskit.providers.aer import QasmSimulator\n",
@@ -204,7 +247,9 @@
     "    r = executed_job.result()\n",
     "    result_dict = r.get_counts(circuit)\n",
     "    # End Code\n",
-    "    return circuit, result_dict"
+    "    return circuit, result_dict\n",
+    "\n",
+    "hw3_1b_response(1024)"
    ]
   },
   {
@@ -263,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "id": "34b581c7-4071-4870-83e5-f950c3eb240c",
    "metadata": {},
    "outputs": [
@@ -271,15 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        ┌───┐     \n",
-      "q792_0: ┤ H ├──■──\n",
-      "        ├───┤  │  \n",
-      "q792_1: ┤ H ├──┼──\n",
-      "        └───┘┌─┴─┐\n",
-      "q792_2: ─────┤ X ├\n",
-      "             └───┘\n",
-      "{'111': 267, '101': 234, '000': 254, '010': 269}\n",
-      "(0, 2)\n"
+      "(0, 1)\n"
      ]
     }
    ],
@@ -311,7 +348,18 @@
     "                qubit_2 = i\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "    return qubit_1, qubit_2"
+    "    return qubit_1, qubit_2\n",
+    "\n",
+    "reg = qiskit.QuantumRegister(6)\n",
+    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "circuit.h(0)\n",
+    "circuit.cx(0,1)\n",
+    "circuit.h(2)\n",
+    "circuit.h(3)\n",
+    "circuit.h(4)\n",
+    "circuit.h(5)\n",
+    "print(hw3_2_response(circuit))"
    ]
   },
   {
@@ -336,10 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "import qiskit\n",
     "from qiskit.providers.aer import QasmSimulator\n",
@@ -365,6 +421,7 @@
     "    bitstrings = [\"000001\", \"000010\", \"000100\", \"001000\", \"010000\", \"100000\"]\n",
     "    qubit_1 = -1\n",
     "    qubit_2 = -1\n",
+    "    one_or_two = 1\n",
     "\n",
     "    for i in range(0,6):\n",
     "        if result_dict.get(bitstrings[i]) == None:\n",
@@ -390,7 +447,18 @@
     "\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "      "
+    "      \n",
+    "\n",
+    "reg = qiskit.QuantumRegister(6)\n",
+    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "circuit.h(0)\n",
+    "circuit.cx(0,1)\n",
+    "circuit.h(2)\n",
+    "circuit.h(3)\n",
+    "circuit.h(4)\n",
+    "circuit.h(5)\n",
+    "print(hw3_3_response(circuit))"
    ]
   },
   {
@@ -420,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "id": "6e752e3b-f5c0-4f9d-b4a5-02f8746c5748",
    "metadata": {},
    "outputs": [
@@ -428,19 +496,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        ┌───┐                         \n",
-      "q808_0: ┤ H ├──■────■────■────■────■──\n",
-      "        └───┘┌─┴─┐  │    │    │    │  \n",
-      "q808_1: ─────┤ X ├──┼────┼────┼────┼──\n",
-      "             └───┘┌─┴─┐  │    │    │  \n",
-      "q808_2: ──────────┤ X ├──┼────┼────┼──\n",
-      "                  └───┘┌─┴─┐  │    │  \n",
-      "q808_3: ───────────────┤ X ├──┼────┼──\n",
-      "                       └───┘┌─┴─┐  │  \n",
-      "q808_4: ────────────────────┤ X ├──┼──\n",
-      "                            └───┘┌─┴─┐\n",
-      "q808_5: ─────────────────────────┤ X ├\n",
-      "                                 └───┘\n"
+      "        ┌───┐     \n",
+      "q904_0: ┤ H ├──■──\n",
+      "        └───┘┌─┴─┐\n",
+      "q904_1: ─────┤ X ├\n",
+      "             └───┘\n"
      ]
     }
    ],
@@ -458,7 +518,9 @@
     "        circuit.cx(0, i)\n",
     "    # End Code\n",
     "\n",
-    "    return circuit"
+    "    return circuit\n",
+    "\n",
+    "print(hw3_4_response(2))"
    ]
   },
   {
