--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "id": "b3547fb9-1733-43a7-86d0-fb146bf0ded6",
    "metadata": {},
    "outputs": [
@@ -70,11 +70,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                ┌───┐\n",
-      "q812_0: ─X──────┤ X ├\n",
-      "         │ ┌───┐└─┬─┘\n",
-      "q812_1: ─X─┤ H ├──■──\n",
-      "           └───┘     \n"
+      "             ┌───┐\n",
+      "q981_0: ─────┤ X ├\n",
+      "        ┌───┐└─┬─┘\n",
+      "q981_1: ┤ H ├──■──\n",
+      "        └───┘     \n"
      ]
     }
    ],
@@ -88,10 +88,10 @@
     "\n",
     "    return circuit\n",
     "\n",
-    "reg = qiskit.QuantumRegister(2)\n",
-    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "# reg = qiskit.QuantumRegister(2)\n",
+    "# circuit = qiskit.QuantumCircuit(reg)\n",
     "\n",
-    "print(hw3_1a_response(circuit, 1, 0))"
+    "# print(hw3_1a_response(circuit, 1, 0))"
    ]
   },
   {
@@ -157,18 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25ff1096a0>,\n",
-       " {'00': 510, '11': 514})"
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd94db20>,\n",
+       " {'00': 513, '11': 511})"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
     "    # End Code\n",
     "    return circuit, result_dict\n",
     "\n",
-    "hw3_1b_response(1024)"
+    "# hw3_1b_response(1024)"
    ]
   },
   {
@@ -213,18 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd9bc3d0>,\n",
-       " {'11': 501, '00': 523})"
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd9b0a90>,\n",
+       " {'00': 523, '11': 501})"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
     "    # End Code\n",
     "    return circuit, result_dict\n",
     "\n",
-    "hw3_1b_response(1024)"
+    "# hw3_1b_response(1024)"
    ]
   },
   {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "id": "34b581c7-4071-4870-83e5-f950c3eb240c",
    "metadata": {},
    "outputs": [
@@ -350,16 +350,16 @@
     "    # End Code\n",
     "    return qubit_1, qubit_2\n",
     "\n",
-    "reg = qiskit.QuantumRegister(6)\n",
-    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "# reg = qiskit.QuantumRegister(6)\n",
+    "# circuit = qiskit.QuantumCircuit(reg)\n",
     "\n",
-    "circuit.h(0)\n",
-    "circuit.cx(0,1)\n",
-    "circuit.h(2)\n",
-    "circuit.h(3)\n",
-    "circuit.h(4)\n",
-    "circuit.h(5)\n",
-    "print(hw3_2_response(circuit))"
+    "# circuit.h(0)\n",
+    "# circuit.cx(0,1)\n",
+    "# circuit.h(2)\n",
+    "# circuit.h(3)\n",
+    "# circuit.h(4)\n",
+    "# circuit.h(5)\n",
+    "# print(hw3_2_response(circuit))"
    ]
   },
   {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
    "outputs": [
@@ -449,16 +449,16 @@
     "    # End Code\n",
     "      \n",
     "\n",
-    "reg = qiskit.QuantumRegister(6)\n",
-    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "# reg = qiskit.QuantumRegister(6)\n",
+    "# circuit = qiskit.QuantumCircuit(reg)\n",
     "\n",
-    "circuit.h(0)\n",
-    "circuit.cx(0,1)\n",
-    "circuit.h(2)\n",
-    "circuit.h(3)\n",
-    "circuit.h(4)\n",
-    "circuit.h(5)\n",
-    "print(hw3_3_response(circuit))"
+    "# circuit.h(0)\n",
+    "# circuit.cx(0,1)\n",
+    "# circuit.h(2)\n",
+    "# circuit.h(3)\n",
+    "# circuit.h(4)\n",
+    "# circuit.h(5)\n",
+    "# print(hw3_3_response(circuit))"
    ]
   },
   {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "6e752e3b-f5c0-4f9d-b4a5-02f8746c5748",
    "metadata": {},
    "outputs": [
@@ -497,9 +497,9 @@
      "output_type": "stream",
      "text": [
       "        ┌───┐     \n",
-      "q904_0: ┤ H ├──■──\n",
+      "q905_0: ┤ H ├──■──\n",
       "        └───┘┌─┴─┐\n",
-      "q904_1: ─────┤ X ├\n",
+      "q905_1: ─────┤ X ├\n",
       "             └───┘\n"
      ]
     }
@@ -520,7 +520,7 @@
     "\n",
     "    return circuit\n",
     "\n",
-    "print(hw3_4_response(2))"
+    "# print(hw3_4_response(2))"
    ]
   },
   {
