fixed len of string

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -401,7 +401,7 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    for i in range(0,bitstring.len()):\n",
+    "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            qubit_list[i].x()\n",
     "    \n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "id": "6e752e3b-f5c0-4f9d-b4a5-02f8746c5748",
    "metadata": {},
    "outputs": [
@@ -496,11 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        ┌───┐     \n",
-      "q905_0: ┤ H ├──■──\n",
-      "        └───┘┌─┴─┐\n",
-      "q905_1: ─────┤ X ├\n",
-      "             └───┘\n"
+      "1\n"
      ]
     }
    ],
@@ -520,7 +516,9 @@
     "\n",
     "    return circuit\n",
     "\n",
-    "# print(hw3_4_response(2))"
+    "# print(hw3_4_response(2))\n",
+    "\n",
+    "print(1 % 8)"
    ]
   },
   {
