--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 87,
    "id": "b3547fb9-1733-43a7-86d0-fb146bf0ded6",
    "metadata": {},
    "outputs": [
@@ -70,11 +70,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             ┌───┐\n",
-      "q981_0: ─────┤ X ├\n",
-      "        ┌───┐└─┬─┘\n",
-      "q981_1: ┤ H ├──■──\n",
-      "        └───┘     \n"
+      "              ┌───┐\n",
+      "q1043_0: ─────┤ X ├\n",
+      "         ┌───┐└─┬─┘\n",
+      "q1043_1: ┤ H ├──■──\n",
+      "         └───┘     \n"
      ]
     }
    ],
@@ -157,18 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd94db20>,\n",
-       " {'00': 513, '11': 511})"
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd91c820>,\n",
+       " {'00': 519, '11': 505})"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,18 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd9b0a90>,\n",
-       " {'00': 523, '11': 501})"
+       "(<qiskit.circuit.quantumcircuit.QuantumCircuit at 0x7f25fd928f10>,\n",
+       " {'11': 539, '00': 485})"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "id": "34b581c7-4071-4870-83e5-f950c3eb240c",
    "metadata": {},
    "outputs": [
@@ -384,15 +384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 1)\n"
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'len'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb Cell 11'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=48'>49</a>\u001b[0m     \u001b[39m# Put your code here (spaces for indentation)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=49'>50</a>\u001b[0m     \u001b[39m# End Code\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=50'>51</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=59'>60</a>\u001b[0m \u001b[39m# circuit.h(5)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=60'>61</a>\u001b[0m \u001b[39m# print(hw3_3_response(circuit))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=62'>63</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mHello\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=63'>64</a>\u001b[0m \u001b[39mprint\u001b[39m(x\u001b[39m.\u001b[39;49mlen())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'len'"
      ]
     }
    ],
@@ -401,9 +405,9 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    for i in range(0,len(bitstring)):\n",
-    "        if bitstring[i] == '1':\n",
-    "            qubit_list[i].x()\n",
+    "    # for i in range(0,len(bitstring)):\n",
+    "        # if bitstring[i] == '1':\n",
+    "        #     qubit_list[i].x()\n",
     "    \n",
     "\n",
     "    return circuit\n",
@@ -447,7 +451,6 @@
     "\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
-    "      \n",
     "\n",
     "# reg = qiskit.QuantumRegister(6)\n",
     "# circuit = qiskit.QuantumCircuit(reg)\n",
@@ -458,7 +461,8 @@
     "# circuit.h(3)\n",
     "# circuit.h(4)\n",
     "# circuit.h(5)\n",
-    "# print(hw3_3_response(circuit))"
+    "# print(hw3_3_response(circuit))\n",
+    "\n"
    ]
   },
   {
@@ -488,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "id": "6e752e3b-f5c0-4f9d-b4a5-02f8746c5748",
    "metadata": {},
    "outputs": [
@@ -496,7 +500,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "         ┌───┐     \n",
+      "q1012_0: ┤ H ├──■──\n",
+      "         └───┘┌─┴─┐\n",
+      "q1012_1: ─────┤ X ├\n",
+      "              └───┘\n"
      ]
     }
    ],
@@ -516,9 +524,7 @@
     "\n",
     "    return circuit\n",
     "\n",
-    "# print(hw3_4_response(2))\n",
-    "\n",
-    "print(1 % 8)"
+    "# print(hw3_4_response(2))"
    ]
   },
   {
