now running, maybe this fixes prime number

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -405,10 +405,10 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    # for i in range(0,len(bitstring)):\n",
-    "        # if bitstring[i] == '1':\n",
-    "        #     qubit_list[i].x()\n",
-    "    \n",
+    "    for i in range(0,len(bitstring)):\n",
+    "        if bitstring[i] == '1':\n",
+    "            circuit.x(i)\n",
+    "            # qubit_list[i].x()\n",
     "\n",
     "    return circuit\n",
     "\n",
