--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -407,6 +407,7 @@
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
+    "            print(\"Applying Not to index: \"+i)\n",
     "            circuit.x(i)\n",
     "            # qubit_list[i].x()\n",
     "\n",
