fixed print error

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -384,19 +384,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'len'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb Cell 11'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=48'>49</a>\u001b[0m     \u001b[39m# Put your code here (spaces for indentation)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=49'>50</a>\u001b[0m     \u001b[39m# End Code\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=50'>51</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=59'>60</a>\u001b[0m \u001b[39m# circuit.h(5)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=60'>61</a>\u001b[0m \u001b[39m# print(hw3_3_response(circuit))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=62'>63</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mHello\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/rmazur/cmsc22880/week7/Lab7-fixed.ipynb#ch0000010vscode-remote?line=63'>64</a>\u001b[0m \u001b[39mprint\u001b[39m(x\u001b[39m.\u001b[39;49mlen())\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'len'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test: 2\n"
      ]
     }
    ],
@@ -407,7 +403,7 @@
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
-    "            print(\"Applying Not to index: \"+i)\n",
+    "            print(\"Applying Not to index: \" + str(i))\n",
     "            circuit.x(i)\n",
     "            # qubit_list[i].x()\n",
     "\n",
@@ -462,8 +458,7 @@
     "# circuit.h(3)\n",
     "# circuit.h(4)\n",
     "# circuit.h(5)\n",
-    "# print(hw3_3_response(circuit))\n",
-    "\n"
+    "# print(hw3_3_response(circuit))\n"
    ]
   },
   {
