added test print

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -403,6 +403,7 @@
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
+    "            print(\"test\")\n",
     "            # print(\"Applying Not to index: \" + str(i))\n",
     "            circuit.x(i)\n",
     "            # qubit_list[i].x()\n",
