added back useful print

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -384,18 +384,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import qiskit\n",
     "from qiskit.providers.aer import QasmSimulator\n",
@@ -403,9 +395,7 @@
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
-    "            print(\"test\")\n",
-    "            # ?\n",
-    "            # print(\"Applying Not to index: \" + str(i))\n",
+    "            print(\"Applying Not to index: \" + str(i))\n",
     "            circuit.x(i)\n",
     "            # qubit_list[i].x()\n",
     "\n",
