added another print

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -396,9 +396,8 @@
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
-    "            circuit.x(i)\n",
-    "            # ?\n",
-    "            # qubit_list[i].x()\n",
+    "            print(qubit_list[i])\n",
+    "            circuit.x(qubit_list[i])\n",
     "\n",
     "    return circuit\n",
     "\n",
